--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="https://www.iltecnico2424.it">link</a>.
+    Se non vieni reindirizzato automaticamente, segui questo <a href="https://www.iltecnico2424.it">link</a>.
 </body>
 </html>
